# ttsfrd-infer

./: .gitattributes  .gitignore  Dockerfile  demo.py  main.py  pyproject.toml  rule.py
.github/workflows/: release.yml  sync-svn.yml
