[project]
name = "ttsfrd-infer"
version = "0.1.10"
description = "ttsfrd infer"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.34.0",
]

[[tool.uv.index]]
name = "huaweicloud"
url = "https://repo.huaweicloud.com/repository/pypi/simple"
default = true